# fulfillment-triage-agents

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agents/: intake.py  router.py  scorer.py  verifier.py
config/: routing_rules.py  scoring_weights.py  validation_thresholds.py
models/: __init__.py  calibration.py  incoming.py  resolution.py  scoring.py  ticket.py  trace.py
scripts/: calibration_report.py  investigate.py  run_all_scenarios.py  run_scenario.py
tests/scenarios/: adversarial_category_ambiguous.json  adversarial_conflicting_signals.json  adversarial_escalation_gaming.json  adversarial_injection_attempt.json  adversarial_missing_context.json  ambiguous_angry.json  high_risk_enterprise.json  low_risk_tracking.json  medium_wrong_item.json  override_billing.json
validators/: __init__.py  intake_validator.py  router_validator.py  scorer_validator.py
